@@ -1,0 +1,1 @@
+DIST clementine-1.1.0rc1.tar.gz 8472774 SHA256 b2905a44258e3793674c93e6218d488d098b2a16c2da59ea6e9e6bfda59ce3cd SHA512 79bf26406de5b59d146b9d2b04b1ba27107ed371e60a55a1f2cd01c03063ff8d39c462026f6123742b5e75c6d5f599827999bfc4da882ac24df9cc5938ec8d08 WHIRLPOOL a2590c1106c2c1755bb7bdd9dccb27220939fd2cfa425979d7350701e4373db1611d3e82bc15f6d835604ff99af57519b2dcab34c2a82641d94c228c0c5dfebf
