@@ -7,10 +7,10 @@
     <name>Nikoli</name>
   </maintainer>
   <use>
-    <flag name="kde">Enable plasma krunner global search</flag>
+    <flag name="googledrive">Enable Google Drive support</flag>
     <flag name="lastfm">Use liblastfm for fetching song info, scrobbling and radio streams</flag>
+    <flag name="moodbar">Enable moodbar support</flag>
     <flag name='projectm'>Build with ProjectM visualization</flag>
-    <flag name='remote'>Enable remote control support</flag>
     <flag name="wiimote">Enable support for Wii remote</flag>
   </use>
 </pkgmetadata>
