@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*clementine-1.1.0_rc1 (07 Oct 2012)
+
+  07 Oct 2012; Nikoli <nikoli@lavabit.com> +clementine-1.1.0_rc1.ebuild,
+  clementine-9999.ebuild, metadata.xml:
+  version bump, add USE debug, googledrive, moodbar, remove USE kde and remote
+
   19 Aug 2012; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild,
   metadata.xml:
   update deps, ayatana is now global use flag
